# LivingGameBoardArchive

./: README.md
3D-Printing/3d Prints/: Buttons.stl  Chute.stl  CoinCap.stl  Main Board.stl  PlayerBoardBottom.stl  PlayerBoardTop.stl  scaledGear.stl  scaledRack.stl
LivingBoardGameMainBoard-master/: CMakeLists.txt  README.md  main_board.c  main_board.h
LivingBoardGameMainBoard-master/Images/: armor.c  armor.h  claw.c  claw.h  firearm.c  firearm.h  heart.c  heart.h  helmet.c  helmet.h  images.c  images.h  meatchunk.c  meatchunk.h  special.c  special.h  swoard.c  swoard.h  telescope.c  telescope.h  vault_boy.c  vault_boy.h  weapon.c  weapon.h  yee.c  yee.h
LivingBoardGameMainBoard-master/Utilities/: image_convert.py
LivingBoardGamePlayerBoard-main/: .gitmodules  CMakeLists.txt  makefile  player_main.c  player_main.h  test.c
LivingBoardGamePlayerBoard-main/Images/: austin.c  austin.h  dog.c  dog.h  gagea.c  gagea.h  images.c  images.h  mutant.c  mutant.h  robot.c  robot.h  strawman.c  strawman.h
LivingBoardGamePlayerBoard-main/Utilities/: image_convert.py
LivingBoardGamePlayerBoard-main/pn532/: PN532_SPI.c
LivingBoardGameSupporting-master/: README.md
TheLivingBoardGame2-main/: README.md  The Living Board Game 2.csproj  The Living Board Game 2.sln  export_presets.cfg  project.godot
TheLivingBoardGame2-main/Assets/: Dpad.png.import  Scientist.png.import  ShopOutline.png.import  colored-transparent_packed.png.import  dog.png.import  glasses.png.import  goblin.png.import  mutant.png.import  placeholder_tile.png.import  scarecrow.png.import  title_background.jpg.import  zoom.png.import
TheLivingBoardGame2-main/Scenes/: Board.tscn  Enemy.tscn  Loading.tscn  Menu.tscn  Player.tscn  Shop.tscn
TheLivingBoardGame2-main/Scripts/: Board.gd  Loading.cs  Menu.gd  MenuSerial.cs  Player.cs  PlayerVars.cs  SerialManager.cs  Shop.gd  UI.gd
pico_w-wifi-controller-data-main/: another_method.py  classification_image.py
(+24 files in other folders)
